fix: issues and cleanup
- Fix comma handling in city name validation
- Fix 401 errors by updating JWT filter for public endpoints
- Fix empty API responses and caching conflicts
- Remove duplicate validation from service layer
- Add 404 page and fix React Router issues
- Clean up unused DTO and components